--- a/src/views/UserContent/UserData/_UserData.scss
+++ b/src/views/UserContent/UserData/_UserData.scss
@@ -3,6 +3,7 @@
         margin-top: 20px;
         font-size: 24px;
         left: 148px;
+        width: 300px;
         position: relative;
     }
     .form-data {
@@ -12,37 +13,46 @@
             margin-left: auto;
             margin-right: auto;
             margin-top: 20px;
-            .form-data-left {}
-            .form-data-right {}
             .form-data-left,
             .form-data-right {
                 display: grid;
                 width: 300px;
                 margin: 30px 30px 10px 30px;
-                .input{
+                .input {
                     border-top: none;
                     border-right: none;
                     border-left: none;
                     outline: none;
                     margin-bottom: 20px;
-                    &.invalid{
+                    &.invalid {
                         border-bottom-color: red;
                     }
-                    &.valid{
+                    &.valid {
                         border-bottom-color: green;
                     }
                 }
             }
         }
-        .button-update{
+        .button-update {
             width: 320px;
             margin: 46px auto 60px auto;
         }
     }
-    .conditions{
+    .conditions {
         width: 90%;
         margin-left: auto;
         margin-right: auto;
         font-size: 12px;
+    }
+}
+
+
+/*landscape*/
+
+@media (min-width: 991.98px) and (max-width: 1199.98px)and (orientation:landscape) {
+    .user-data {
+        .data-title {
+            left: 32px;
+        }
     }
 }
