--- a/src/views/UserContent/Cart/_Cart.scss
+++ b/src/views/UserContent/Cart/_Cart.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 90%;
     display: grid;
-    .cart-msg{
+    .cart-msg {
         width: auto;
         margin: auto;
         font-size: 20px;
@@ -21,8 +21,7 @@
         margin: auto;
         .ticket-info {
             display: flex;
-            
-            .info-lef {
+            .info-left {
                 .number-order,
                 .takeaway {
                     em {
@@ -73,7 +72,7 @@
                     bottom: 100px;
                     font-size: 20px;
                 }
-                .delete-product{
+                .delete-product {
                     position: absolute;
                     font-size: 20px;
                     right: 10px;
@@ -95,10 +94,7 @@
                 right: 30px;
             }
         }
-        .cancel,
-        .code-generate {
-        }
-        .cancel{
+        .cancel {
             position: relative;
             top: 60px;
             left: 220px;
@@ -108,6 +104,56 @@
             top: 34px;
             right: 120px;
             position: relative;
+        }
+    }
+}
+
+
+/*----- movil -----*/
+
+
+/*Portrait*/
+
+
+/*Default*/
+
+@media (max-width: 575.98px)and (orientation:portrait) {
+    .cart {
+        margin-top: 10px;
+        .cart-msg {
+            text-align: center;
+            padding: 10px;
+        }
+        .info-title {
+            width: 200px;
+            left: 20px;
+            margin-bottom: 0px;
+        }
+        .ticket {
+            width: 90%;
+            .ticket-orders {
+                width: 100%;
+                .ticket-order {
+                    height: 160px;
+                    .name-product,
+                    .descripton,
+                    .count {
+                        width: 120px;
+                    }
+                    .count {
+                        width: 6px;
+                        left: 2px;
+                    }
+                    .price-counts {
+                        width: 42px;
+                    }
+                }
+            }
+        }
+        .ticket-buttons {
+            .cancel {
+                width: 20px;
+            }
         }
     }
 }
