--- a/src/views/UserContent/Shop/_Shop.scss
+++ b/src/views/UserContent/Shop/_Shop.scss
@@ -27,7 +27,6 @@
             &:hover {
                 border-radius: 10px;
                 background-color: nth(var.$grey, 2);
-                //background-color: cadetblue;
                 color: white;
                 em,
                 a {
@@ -38,7 +37,6 @@
         }
     }
     .shop-content {
-        //width: 90%;
         width: 100%;
         height: 100%;
         border-radius: 10px;
@@ -50,36 +48,52 @@
 MEDIA-QUERY
 **/
 
-
-/*----- Escritorio -----*/
-
-@media (min-width: 1199.98px) {
-    body {
-        background: red;
-    }
-}
-
-
 /*----- Tablet -----*/
 
 
 /*Portrait*/
 
 @media (min-width: 576px) and (max-width: 991.98px) and (orientation:portrait) {
-    body {
-        background: orange;
+
+    .shop-component {
+        .shop-panel {
+            position: absolute;
+            .button-panel {
+                margin: auto;
+                position: relative;
+                top: 80px;
+                right: 76px;
+                padding: 0px;
+                width: 50px;
+                margin-left: 16%;
+                &:hover {
+                    border-radius: 0px;
+                    background-color: white;
+                    color: black;
+                    em,
+                    a {
+                        color: nth(var.$grey, 2);
+                        text-decoration: none;
+                    }
+                }
+                a {
+                    .link {
+                        margin-left: 0px;
+                    }
+                }
+            }
+        }
+        .shop-content {
+            margin-top: 160px;
+            height: 90%;
+            .product {
+                width: auto;
+                height: 10%;
+                margin: 20% 26% 20% 26%;
+            }
+        }
     }
 }
-
-
-/*landscape*/
-
-@media (min-width: 991.98px) and (max-width: 1199.98px)and (orientation:landscape) {
-    body {
-        background: blue;
-    }
-}
-
 
 /*----- movil -----*/
 
@@ -90,9 +104,6 @@ MEDIA-QUERY
 /*Default*/
 
 @media (max-width: 575.98px)and (orientation:portrait) {
-    body {
-        background: green;
-    }
     .shop-component {
         .shop-panel {
             position: absolute;
@@ -131,14 +142,5 @@ MEDIA-QUERY
                 margin: 20% 26% 40% 26%;
             }
         }
-    }
-}
-
-
-/*landscape*/
-
-@media (min-width: 576px) and (max-width: 991.98px) and (orientation:landscape) {
-    body {
-        background: black;
     }
 }
