--- a/src/views/UserContent/_ProfileContent.scss
+++ b/src/views/UserContent/_ProfileContent.scss
@@ -4,7 +4,6 @@
             .menu-user {
                 height: 60%;
                 margin-top: 0px;
-                .menu-user-title {}
             }
             .menu-user-content {
                 .menu-user-content-left,
@@ -17,78 +16,101 @@
     }
 }
 
-// /**
-// MEDIA-QUERY
-// **/
-// /*----- Escritorio -----*/
-// @media (min-width: 1199.98px) {
-//     .profile {
-//     background: red;
-//     }
-//     }
-//     /*----- Tablet -----*/
-//     /*Portrait*/
-//     @media (min-width: 576px) and (max-width: 991.98px) and (orientation:portrait) {
-//     .profile {
-//     background: orange;
-//     }
-//     }
-//     /*landscape*/
-//     @media (min-width: 991.98px) and (max-width: 1199.98px)and (orientation:landscape) {
-//     .profile {
-//     background: blue;
-//     }
-//     }
-/*----- movil -----*/
+
+/**
+MEDIA-QUERY
+**/
+
+/*----- Tablet -----*/
+
+
 /*Portrait*/
-/*Default*/
-@media (max-width: 575.98px)and (orientation:portrait) {
-.profile {
-//background: green;
-.user-data{
-    .data-title{
-        left: 50px;
-        width: 80px;
-        margin-bottom: 40px;
-    }
-    .form-data{
-        display: contents;
-        .form-data-center{
-            display: contents;
-            .form-data-left,
-            .form-data-right{
-                width: 240px;
-                margin: auto;
+
+@media (min-width: 576px) and (max-width: 991.98px) and (orientation:portrait) {
+    .profile {
+        .user-data {
+            .data-title {
+                left: 50px;
+                width: 80px;
+                margin-bottom: 40px;
+            }
+            .form-data {
+                display: contents;
+                .form-data-center {
+                    display: contents;
+                    .form-data-left,
+                    .form-data-right {
+                        width: 300px;
+                        margin: auto;
+                    }
+                }
+                .button-update {
+                    width: 80%;
+                    font-size: 16px;
+                    display: block;
+                }
             }
         }
-        .button-update{
-            width: 80%;
-            font-size: 16px;
-            display: block;
+    }
+}
+
+/*----- movil -----*/
+
+
+/*Portrait*/
+
+
+/*Default*/
+
+@media (max-width: 575.98px)and (orientation:portrait) {
+    .profile {
+        .user-data {
+            .data-title {
+                left: 50px;
+                width: 80px;
+                margin-bottom: 40px;
+            }
+            .form-data {
+                display: contents;
+                .form-data-center {
+                    display: contents;
+                    .form-data-left,
+                    .form-data-right {
+                        width: 240px;
+                        margin: auto;
+                    }
+                }
+                .button-update {
+                    width: 80%;
+                    font-size: 16px;
+                    display: block;
+                }
+            }
         }
     }
 }
-}
-}
+
 
 /*landscape*/
 
 @media (min-width: 576px) and (max-width: 991.98px) and (orientation:landscape) {
     .profile {
-        //background: black;
         .profile-content {
+            width: 100%;
             .profile-component {
                 .menu-user {
+                    height: 60%;
+                    margin-top: 20%;
                     .menu-user-title {
                         padding-top: 20px;
                     }
                 }
-                .menu-user-content {
-                    .menu-user-content-left,
-                    .menu-user-content-right {}
+            }
+            .user-data{
+                .data-title{
+                    left: 18px;
                 }
             }
-            
         }
     }
 }
