--- a/src/components/Footer/_Footer.scss
+++ b/src/components/Footer/_Footer.scss
@@ -6,12 +6,12 @@
     height: nth(var.$hundreds, 2);
     display: flex;
     align-items: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: var.$font-family;
     position: absolute;
     .footer-center {
         @include mix.center(var.$per-10);
         text-align: center;
-        margin-bottom: 20px;
+        margin-bottom: var.$mp-i;
         .footer-logo {
             margin-bottom: var.$mp-i;
             font-weight: nth(var.$fw, 9);
@@ -35,25 +35,12 @@
     }
 }
 
-/*----- Escritorio -----*/
-
-@media (min-width: 1199.98px) {
-    // body {
-    //     background: lightblue;
-    // }
-}
-
 
 /*----- Tablet -----*/
-
 
 /*Portrait*/
 
 @media (min-width: 576px) and (max-width: 991.98px) and (orientation:portrait) {
-    // body {
-    //     background: orange;
-    // }
-
     .footer {
         .footer-center {
             .footer-logo {
@@ -74,41 +61,16 @@
     }
 }
 
-
-/*landscape*/
-
-@media (min-width: 991.98px) and (max-width: 1199.98px)and (orientation:landscape) {
-    // body {
-    //     background: blue;
-    // }
-}
-
-
 /*----- movil -----*/
 
-
 /*Portrait*/
-
 
 /*Default*/
 
 @media (max-width: 575.98px)and (orientation:portrait) {
-    // body {
-    //     background: green;
-    // }
-
     .footer {
         .footer-center {
             width: auto;
         }
     }
-}
-
-
-/*landscape*/
-
-@media (min-width: 576px) and (max-width: 991.98px) and (orientation:landscape) {
-    // body {
-    //     background: pink;
-    // }
 }
