--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -4,12 +4,12 @@
     @include mix.center(100%);
     display: flex;
     position: fixed;
-    background: white;
-    top: 0;
-    z-index: 1;
+    background: var.$white;
+    top: var.$zero;
+    z-index: var.$one;
     .header-left {
         width: var.$per-2;
-        margin-left: 30px;
+        margin-left: var.$size-p;
         .icon-align {
             position: relative;
             top: var.$size-s;
@@ -27,7 +27,7 @@
                 cursor: pointer;
                 height: var.$per-10;
                 &:hover{
-                    border-bottom: 1px solid;
+                    border-bottom: var.$size-b solid;
                 }
             }
             .menu-logo {
@@ -45,9 +45,9 @@
                 position: relative;
                 top: var.$size-s;
                 font-size: var.$size-k;
-                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+                font-family: var.$font-family;
                 a {
-                    color: black;
+                    color: var.$black;
                     text-decoration: none;
                 }
             }
@@ -55,20 +55,20 @@
     }
     .header-right {
         width: var.$per-2;
-        margin-right: 30px;
+        margin-right: var.$size-p;
         .icon-align {
             position: relative;
-            top: 30px;
-            font-size: 20px;
+            top: var.$size-p;
+            font-size: var.$size-l;
             cursor: pointer;
             float: right;
             &:hover {
-                color: #9CADA4;
+                color: nth(var.$grey, 3);
             }
             .login{
                 .button-login{
                     .user-name-login{
-                        margin-right: 10px;
+                        margin-right: var.$size-g;
                     }
                 }
             }
@@ -82,12 +82,6 @@
 *
 */
 
-
-/*----- Escritorio -----*/
-
-@media (min-width: 1199.98px) and (max-width: 1399px) {}
-
-
 /*----- Tablet -----*/
 
 
@@ -96,44 +90,37 @@
 @media (min-width: 576px) and (max-width: 991.98px) and (orientation:portrait) {
     .header {
         .header-left {
-            width: 5%;
+            width: var.$per-1 / 2;
         }
         .header-center {
-            width: 90%;
+            width: var.$per-9;
             .header-center-ul {
                 .menu-logo {
-                    margin-left: 6px;
-                    margin-right: 6px;
+                    margin-left: var.$mp-d;
+                    margin-right: var.$mp-d;
                 }
             }
         }
         .header-right {
-            width: 5%;
+            width: var.$per-1 / 2;
         }
     }
 }
 
 
-/*landscape*/
-
-@media (min-width: 991.98px) and (max-width: 1199.98px)and (orientation:landscape) {}
-
-
 /*----- movil -----*/
 
-
 /*Portrait*/
-
 
 /*Default*/
 
 @media (max-width: 575.98px)and (orientation:portrait) {
     .header {
-        height: 260px;
+        height: var.$mp-t;
         .header-left {
             .icon-align {
-                top: 160px;
-                left: 20px;
+                top: var.$mp-q;
+                left: var.$size-l;
             }
         }
         .header-center {
@@ -141,18 +128,18 @@
                 display: grid;
                 .menu-logo {
                     position: fixed;
-                    top: 40px;
-                    left: 18px;
-                    margin: 0px;
+                    top: var.$mp-l;
+                    left: var.$mp-h + var.$mp-b;
+                    margin: var.$mp-a;
                 }
                 .ul-li {
-                    margin-bottom: 6px;
+                    margin-bottom: var.$mp-d;
                 }
             }
         }
         .header-right {
             position: relative;
-            top: 6px;
+            top: var.$mp-d;
         }
     }
 }
@@ -162,18 +149,18 @@
 
 @media all and (min-width: 576px) and (max-width: 991.98px) and (orientation:landscape) {
     .header {
-        width: 100%;
+        width: var.$per-10;
         .header-left {
-            width: 10%;
+            width: var.$per-1;
         }
         .header-center {
-            width: 80%;
+            width: var.$per-8;
             .header-center-ul {
                 display: flex;
             }
         }
         .header-right {
-            width: 10%;
+            width: var.$per-1;
         }
     }
 }
