--- a/src/components/MenuToggle/_MenuToggle.scss
+++ b/src/components/MenuToggle/_MenuToggle.scss
@@ -1,44 +1,44 @@
+@use '../../scss/utilities/variables' as var;
+@use '../../scss/utilities/mixings' as mix;
 
 .sidebar {
     position: fixed;
-    top: 0;
-    bottom: 0;
-    left: -400px;
-    width: 400px;
+    top: var.$zero;
+    bottom: var.$zero;
+    left: nth(var.$downHundreds, 4);
+    width: nth(var.$hundreds, 4);
     transition: all 0.5s;
-    background-color: white;
-    z-index: 1;
+    background-color: var.$white;
+    z-index: var.$one;
 
     &.is-open {
-        left: 0;
+        left: var.$zero;
     }
     .close-icon{
         position: relative;
-        left: 360px;
-        font-size: 18px;
-        top: 15px;
+        left: var.$mp-u + var.$mp-l;
+        font-size: var.$size-k;
+        top: var.$size-j;
     }
 
     .nav{
-        width: 300px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 80px;
+        @include mix.center(nth(var.$hundreds, 3));
+        margin-top: var.$mp-nn;
         text-align: center;
         .nav-item{
-            width: 100%;
+            width: var.$per-10;
             text-align: center;
-            margin-bottom: 30px;
+            margin-bottom: var.$size-p;
             .logo{
-                font-weight: 900;
+                font-weight: nth(var.$fw, 9);
             }
             .hour-days p{
-                margin: 0px;     
+                margin: var.$mp-a;     
             }
         }
         .instagram{
             position: relative;
-            top: 150px;
+            top: var.$mp-q - var.$mp-f;
         }
     }
 }
