--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -22,6 +22,8 @@ $size-r: 34px;
 $size-s: 36px;
 $size-t: 38px;
 $size-u: 40px;
+$size-v: 50px;
+$size-w: 60px;
 
 /*Margin and Padding*/
 
@@ -55,7 +57,9 @@ $mp-z: 900px;
 
 /*centenas*/
 
-$hundreds: (100px, 200px, 300px, 400px, 500px, 600px, 700px, 800px, 900px, 100px);
+$hundreds: (100px, 200px, 300px, 400px, 500px, 600px, 700px, 800px, 900px, 1000px);
+
+$downHundreds: (-100px, -200px, -300px, -400px, -500px, -600px, -700px, -800px, -900px, -1000px);
 
 /*Media-query*/
 
@@ -64,6 +68,7 @@ $medias: (375px, 1007px, 1200px, 1400px, 1440px);
 /*Font-weight*/
 
 $fw: (100, 200, 300, 400, 500, 600, 700, 800, 900);
+$downFw: (-100, -200, -300, -400, -500, -600, -700, -800, -900);
 
 /*Porcentjes*/
 
@@ -79,15 +84,21 @@ $per-8: 80%;
 $per-9: 90%;
 $per-10: 100%;
 
+$zero: 0;
+$one: 1;
+
 /*Colours*/
 
-$white: #f7f7ee;
+$white: #ffffff;
 $black: #222831;
 $brown: #E3D0B9;
 $grey: (#C7CFB7, #9CADA4, #9DAB86);
+//  color: nth(var.$grey, 3);
 
 /*Buttons*/
 
 $btnBlue:(#3d94f6, #337fed, #1e62d0);
 $btnRed:(#f24537, #c62d1f, #d02718);
 $btnGreen:(#89c403, #74b807, #77a809);
+
+$font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
