--- a/src/views/AdminContent/Orders/_Orders.scss
+++ b/src/views/AdminContent/Orders/_Orders.scss
@@ -1,3 +1,5 @@
+@use '../../../scss/utilities/variables' as var;
+@use '../../../scss/utilities/mixings' as mix;
 /**
 MEDIA-QUERY
 **/
@@ -9,30 +11,30 @@ MEDIA-QUERY
 
 @media (min-width: 576px) and (max-width: 991.98px) and (orientation:portrait) {
     .order-history-order-admin{
-        width: 80%;
+        width: var.$per-8;
         .order {
-            width: 100%;
-            margin-bottom: 30px;
+            width: var.$per-10;
+            margin-bottom: var.$size-p;
             display: contents;
             .order-price {
-                margin-bottom: 16px;
+                margin-bottom: var.$mp-h;
             }
             .order-button,
             .order-cancel,
             .delivered,
             .order-price {
                 position: static;
-                bottom: 0px;
-                margin: 0px;
-                margin-bottom: 10px;
+                bottom: var.$mp-a;
+                margin: var.$mp-a;
+                margin-bottom: var.$mp-f;
             }
             .btn-order-admin {
                 display: inline;
-                left: 0px !important;
-                width: 120px;
+                left: var.$mp-a !important;
+                width: var.$size-w * 2;
                 text-align: center;
                 margin: auto;
-                margin-right: 10px;
+                margin-right: var.$mp-f;
             }
         }
     }
@@ -48,30 +50,30 @@ MEDIA-QUERY
 
 @media (max-width: 575.98px)and (orientation:portrait) {
     .order-history-order-admin{
-        width: 80%;
+        width: var.$per-8;
         .order {
-            width: 100%;
-            margin-bottom: 30px;
+            width: var.$per-10;
+            margin-bottom: var.$size-p;
             display: contents;
             .order-price {
-                margin-bottom: 16px;
+                margin-bottom: var.$mp-h;
             }
             .order-button,
             .order-cancel,
             .delivered,
             .order-price {
                 position: static;
-                bottom: 0px;
-                margin: 0px;
-                margin-bottom: 10px;
+                bottom: var.$mp-a;
+                margin: var.$mp-a;
+                margin-bottom: var.$mp-f;
             }
             .btn-order-admin {
                 display: block;
-                left: 0px !important;
-                width: 120px;
+                left: var.$mp-a !important;
+                width: var.$size-w * 2;
                 text-align: center;
                 margin: auto;
-                margin-bottom: 10px;
+                margin-bottom: var.$mp-f;
             }
         }
     }
