--- a/src/views/Blog/_Blog.scss
+++ b/src/views/Blog/_Blog.scss
@@ -1,28 +1,31 @@
+@use '../../scss/utilities/variables' as var;
+@use '../../scss/utilities/mixings' as mix;
+
 .blog-content{
-    width: 100%;
-    height: 480px;
-    margin-top: 120px;
+    width: var.$per-10;
+    height: var.$mp-v;
+    margin-top: var.$size-w * 2;
     display: flex;
     .content-message{
-        width: 50%;
-        height: 90%;
+        width: var.$per-5;
+        height: var.$per-9;
         margin: auto;
         text-align: center;
         .message-title{
-            margin-top: 40px;
-            font-size: 40px;
-            font-weight: 900;
+            margin-top: var.$mp-l;
+            font-size: var.$mp-l;
+            font-weight: nth(var.$fw, 9);
             p{
-                margin-bottom: 0;
+                margin-bottom: var.$zero;
             }
         }
         .message-subtitle{
-            margin-top: 20px;
-            margin-bottom: 80px;
+            margin-top: var.$mp-i;
+            margin-bottom: var.$mp-nn;
         }
         .message-spinner{
             .spinner-border{
-                margin: 20px;
+                margin: var.$mp-i;
             }
         }
     }
