--- a/src/views/Team/_Team.scss
+++ b/src/views/Team/_Team.scss
@@ -1,10 +1,10 @@
 @use '../../scss/utilities/variables' as var;
 @use '../../scss/utilities/mixings' as mix;
 .team {
-    height: 700px;
+    height: nth(var.$hundreds, 7);
     display: flex;
     margin-top: 60px;
-    margin-bottom: 100px;
+    margin-bottom: nth(var.$hundreds, 1);
     .partner-one {
         background-image: url('../../images/partner-one.png');
         background-position-y: -120px;
@@ -63,7 +63,7 @@
 
 @media (min-width: 576px) and (max-width: 991.98px) and (orientation:portrait) {
     .team {
-        padding-top: 100px;
+        padding-top: nth(var.$hundreds, 1);
         .partner-two {
             background-position-y: -120px;
         }
@@ -75,7 +75,7 @@
 
 @media (min-width: 991.98px) and (max-width: 1199.98px)and (orientation:landscape) {
     .team {
-        padding-top: 100px;
+        padding-top: nth(var.$hundreds, 1);
         .partner-two {
             background-position-y: -120px;
         }
